--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Välkommen</h1>
+    <h1>Välkommen till min sida</h1>
 </body>
 </html>
